--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -4,5 +4,8 @@
     },
     "[html]": {
         "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "[css]": {
+        "editor.defaultFormatter": "vscode.css-language-features"
     }
 }
